# MedRAG

./: README.md  pyproject.toml
medrag/: get_data.py  get_json.py  make_report.py  prompt.txt  repute_clear_gemini.py  repute_clear_gpt.py
